--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "13320e4f",
+   "id": "b4770581",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84d52911",
+   "id": "0eef1cc3",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a907956a",
+   "id": "d26a25e8",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f87356e",
+   "id": "28ae2332",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e5820b1",
+   "id": "54175216",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a69d676a",
+   "id": "e2057121",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2ddc4a21",
+   "id": "f5efaed6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T10:18:49.889173Z",
-     "iopub.status.busy": "2025-01-29T10:18:49.888952Z",
-     "iopub.status.idle": "2025-01-29T10:18:53.625912Z",
-     "shell.execute_reply": "2025-01-29T10:18:53.625281Z"
+     "iopub.execute_input": "2025-01-29T11:55:47.387649Z",
+     "iopub.status.busy": "2025-01-29T11:55:47.387452Z",
+     "iopub.status.idle": "2025-01-29T11:55:50.780871Z",
+     "shell.execute_reply": "2025-01-29T11:55:50.780265Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4c8c56b",
+   "id": "8c2940b2",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e716893",
+   "id": "ec1e4039",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84096963",
+   "id": "908b36a9",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f9625a3",
+   "id": "9cf266de",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40482641",
+   "id": "f12cf437",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e579ef3d",
+   "id": "e51af808",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07f82b41",
+   "id": "07be8ca0",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83a37f78",
+   "id": "2dd0f2cb",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9b5efb29",
+   "id": "8c199352",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T10:18:53.628321Z",
-     "iopub.status.busy": "2025-01-29T10:18:53.627830Z",
-     "iopub.status.idle": "2025-01-29T10:18:55.553978Z",
-     "shell.execute_reply": "2025-01-29T10:18:55.553380Z"
+     "iopub.execute_input": "2025-01-29T11:55:50.783354Z",
+     "iopub.status.busy": "2025-01-29T11:55:50.782855Z",
+     "iopub.status.idle": "2025-01-29T11:55:53.056522Z",
+     "shell.execute_reply": "2025-01-29T11:55:53.055862Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b843c164",
+   "id": "42e165fa",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "50ce66ee",
+   "id": "52565ddf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T10:18:55.555853Z",
-     "iopub.status.busy": "2025-01-29T10:18:55.555664Z",
-     "iopub.status.idle": "2025-01-29T10:18:55.558947Z",
-     "shell.execute_reply": "2025-01-29T10:18:55.558331Z"
+     "iopub.execute_input": "2025-01-29T11:55:53.058691Z",
+     "iopub.status.busy": "2025-01-29T11:55:53.058315Z",
+     "iopub.status.idle": "2025-01-29T11:55:53.061965Z",
+     "shell.execute_reply": "2025-01-29T11:55:53.061294Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa723b2a",
+   "id": "bfb50d13",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7826fec8",
+   "id": "9eca6ef0",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd743ae4",
+   "id": "4e7dfa48",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09699604",
+   "id": "ff1ba966",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "40a80f42",
+   "id": "7b732172",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T10:18:55.560725Z",
-     "iopub.status.busy": "2025-01-29T10:18:55.560552Z",
-     "iopub.status.idle": "2025-01-29T10:18:55.606083Z",
-     "shell.execute_reply": "2025-01-29T10:18:55.605459Z"
+     "iopub.execute_input": "2025-01-29T11:55:53.063991Z",
+     "iopub.status.busy": "2025-01-29T11:55:53.063638Z",
+     "iopub.status.idle": "2025-01-29T11:55:53.111297Z",
+     "shell.execute_reply": "2025-01-29T11:55:53.110652Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74566361",
+   "id": "ab158b15",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "887c8edd",
+   "id": "d4fb4fb4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T10:18:55.607948Z",
-     "iopub.status.busy": "2025-01-29T10:18:55.607766Z",
-     "iopub.status.idle": "2025-01-29T10:18:55.682093Z",
-     "shell.execute_reply": "2025-01-29T10:18:55.681603Z"
+     "iopub.execute_input": "2025-01-29T11:55:53.113450Z",
+     "iopub.status.busy": "2025-01-29T11:55:53.113072Z",
+     "iopub.status.idle": "2025-01-29T11:55:53.188385Z",
+     "shell.execute_reply": "2025-01-29T11:55:53.187822Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e50df21f",
+   "id": "0578b989",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17a107c9",
+   "id": "ddb21cb0",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "957ebd92",
+   "id": "fd10719d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T10:18:55.684042Z",
-     "iopub.status.busy": "2025-01-29T10:18:55.683690Z",
-     "iopub.status.idle": "2025-01-29T10:18:55.712958Z",
-     "shell.execute_reply": "2025-01-29T10:18:55.712465Z"
+     "iopub.execute_input": "2025-01-29T11:55:53.190610Z",
+     "iopub.status.busy": "2025-01-29T11:55:53.190220Z",
+     "iopub.status.idle": "2025-01-29T11:55:53.223492Z",
+     "shell.execute_reply": "2025-01-29T11:55:53.222877Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2e4e061",
+   "id": "af6f5abd",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e4ad99f",
+   "id": "aab52397",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b75551e7",
+   "id": "fd00d9b5",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "396f1739",
+   "id": "676d5e0f",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98eaaa14",
+   "id": "10d4eb35",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e99755a8",
+   "id": "82eeae1d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T10:18:55.714845Z",
-     "iopub.status.busy": "2025-01-29T10:18:55.714668Z",
-     "iopub.status.idle": "2025-01-29T10:18:55.719180Z",
-     "shell.execute_reply": "2025-01-29T10:18:55.718512Z"
+     "iopub.execute_input": "2025-01-29T11:55:53.225766Z",
+     "iopub.status.busy": "2025-01-29T11:55:53.225384Z",
+     "iopub.status.idle": "2025-01-29T11:55:53.230983Z",
+     "shell.execute_reply": "2025-01-29T11:55:53.230467Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e3ba97e",
+   "id": "de1af526",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c2134101",
+   "id": "a7790977",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T10:18:55.720902Z",
-     "iopub.status.busy": "2025-01-29T10:18:55.720580Z",
-     "iopub.status.idle": "2025-01-29T10:18:55.723649Z",
-     "shell.execute_reply": "2025-01-29T10:18:55.722982Z"
+     "iopub.execute_input": "2025-01-29T11:55:53.233025Z",
+     "iopub.status.busy": "2025-01-29T11:55:53.232637Z",
+     "iopub.status.idle": "2025-01-29T11:55:53.235788Z",
+     "shell.execute_reply": "2025-01-29T11:55:53.235223Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "113f06c7",
+   "id": "5b16e4ae",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "19cfec0e",
+   "id": "0677db08",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T10:18:55.725312Z",
-     "iopub.status.busy": "2025-01-29T10:18:55.725106Z",
-     "iopub.status.idle": "2025-01-29T10:18:58.302634Z",
-     "shell.execute_reply": "2025-01-29T10:18:58.302086Z"
+     "iopub.execute_input": "2025-01-29T11:55:53.237666Z",
+     "iopub.status.busy": "2025-01-29T11:55:53.237306Z",
+     "iopub.status.idle": "2025-01-29T11:55:55.945304Z",
+     "shell.execute_reply": "2025-01-29T11:55:55.944665Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "468d151c",
+   "id": "1bd9f0ae",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fecb815e",
+   "id": "8ef014ea",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03b4fb07",
+   "id": "005dfc6b",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc00f29a",
+   "id": "8faaa37e",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "99fb8872",
+   "id": "22187fc2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T10:18:58.304752Z",
-     "iopub.status.busy": "2025-01-29T10:18:58.304264Z",
-     "iopub.status.idle": "2025-01-29T10:18:58.307849Z",
-     "shell.execute_reply": "2025-01-29T10:18:58.307316Z"
+     "iopub.execute_input": "2025-01-29T11:55:55.947654Z",
+     "iopub.status.busy": "2025-01-29T11:55:55.947283Z",
+     "iopub.status.idle": "2025-01-29T11:55:55.950912Z",
+     "shell.execute_reply": "2025-01-29T11:55:55.950345Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f3c386c6b60>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fac443ebba0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12a4b61",
+   "id": "e3b72aae",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c6ad470",
+   "id": "60c77d28",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcdd7e87",
+   "id": "190b1140",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "359f7313",
+   "id": "10590705",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "97ad5df4",
+   "id": "279b2777",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T10:18:58.309674Z",
-     "iopub.status.busy": "2025-01-29T10:18:58.309334Z",
-     "iopub.status.idle": "2025-01-29T10:18:58.312329Z",
-     "shell.execute_reply": "2025-01-29T10:18:58.311724Z"
+     "iopub.execute_input": "2025-01-29T11:55:55.952923Z",
+     "iopub.status.busy": "2025-01-29T11:55:55.952581Z",
+     "iopub.status.idle": "2025-01-29T11:55:55.955750Z",
+     "shell.execute_reply": "2025-01-29T11:55:55.955136Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bd2be097",
+   "id": "5a90ab99",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-29T10:18:58.314054Z",
-     "iopub.status.busy": "2025-01-29T10:18:58.313711Z",
-     "iopub.status.idle": "2025-01-29T10:18:59.355116Z",
-     "shell.execute_reply": "2025-01-29T10:18:59.354606Z"
+     "iopub.execute_input": "2025-01-29T11:55:55.957632Z",
+     "iopub.status.busy": "2025-01-29T11:55:55.957224Z",
+     "iopub.status.idle": "2025-01-29T11:55:57.035876Z",
+     "shell.execute_reply": "2025-01-29T11:55:57.035284Z"
     }
    },
    "outputs": [
